--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "json-server": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -13,9 +14,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "json-server -w src/data/db.json --port=3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cssbuild": "tailwindcss -i ./input.css -o ./src/css/main.css",
+    "watch": "tailwindcss -i ./input.css -o ./src/css/main.css --watch"
   },
   "eslintConfig": {
     "extends": [
